fix letter spacing

--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -9,6 +9,7 @@
 
    margin-left: auto;
    margin-right: auto;
+   letter-spacing: normal;
 }
 @media only screen and (max-width:767.98px) and (min-resolution: 192dpi){
     .main-footer{
@@ -138,6 +139,7 @@
 .outer-ul{
     display: flex;
     gap: 40px;
+    letter-spacing: normal;
    
 }
 @media only screen and (min-width: 768px){
@@ -271,11 +273,13 @@ padding: 20px 18px;
     width: 147px;
     font-size: 12px;
     line-height: 1.33;
+    letter-spacing: normal;
 }
 .right-container{
     width: 116px;
     font-size: 12px;
     line-height: 1.33;
+    letter-spacing: normal;
     
 }
 .phone-nmbr{
